--- a/notebooks/04-ChatGPT.ipynb
+++ b/notebooks/04-ChatGPT.ipynb
@@ -2,14 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai\n",
     "import os\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "OPENAI_API_KEY = os.getenv('OPENAI_API_KEY')"
    ]
   },
   {
@@ -27,14 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "openai.api_key = OPENAI_API_KEY\n",
     "\n",
-    "openai.api_key = \"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\"\n",
-    "#openai.api_key = os.getenv('OPENAI_API_KEY')\n",
     "# Set up the model and prompt\n",
     "model_engine = \"text-davinci-003\"\n",
     "question = \"\"\"\n",
@@ -477,6 +486,242 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resolving exceptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openai\n",
+    "openai.api_key = OPENAI_API_KEY\n",
+    "#openai.api_key = os.getenv('OPENAI_API_KEY')\n",
+    "# Set up the model and prompt\n",
+    "model_engine = \"text-davinci-003\"\n",
+    "question = \"\"\"\n",
+    "extract the following fields from the text: job title, company name, salary, location, job type, years of experience, and required skills as keywords, if no info were found set field to none:\n",
+    "\"\"\"\n",
+    "job_post = ''\n",
+    "prompt = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exceptions = data.loc[job_description.isna().all(axis=1) & (data.full_text!='\\n')]\n",
+    "responses = np.empty(exceptions.full_text.shape , dtype='O')\n",
+    "latest_idx = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n",
+      "32\n",
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(latest_idx,exceptions.shape[0]):\n",
+    "    job_post = exceptions.full_text.values[i]\n",
+    "    if job_post is np.nan:\n",
+    "      responses[i] = ''\n",
+    "      continue\n",
+    "    if job_post == '':\n",
+    "      responses[i] = ''\n",
+    "      continue\n",
+    "   \n",
+    "    completion = openai.Completion.create(\n",
+    "    engine=model_engine,\n",
+    "    prompt=question + '\\n' + job_post + '\\n',\n",
+    "    max_tokens=55,\n",
+    "    n=1,\n",
+    "    stop=None,\n",
+    "    temperature=0)\n",
+    "    responses[i] = completion.choices[0].text\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    latest_idx = i\n",
+    "    print(i)\n",
+    "    if i%100==0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.loc[job_description.isna().all(axis=1) & (data.full_text!='\\n'), [\"description\"]] = responses"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extracting required skills\n",
+    "the first time we extracted the required skills was not good enough"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "openai.api_key =OPENAI_API_KEY\n",
+    "model_engine = \"text-davinci-003\"\n",
+    "\n",
+    "question = \"list the soft and hard skills in a single word of the following job post:\"\n",
+    "job_post = ''\n",
+    "prompt = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"../data/data_v5.4.csv\")\n",
+    "responses = pd.read_csv(\"../data/incomplete_job_skills.csv\")\n",
+    "responses = responses[\"0\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🕹Job Title: #Flutter Developer\n",
+      "Job Type: #Full Time\n",
+      "Job Location: #Remotely or in #Damascus, Al-Jeser Al-Abead\n",
+      "\n",
+      "We are hiring ( flutter developer )\n",
+      "\n",
+      "📌 at least 3 years XP on android or ios\n",
+      "📌 at least 2 years XP on flutter\n",
+      "📌 full time only\n",
+      "📌 advanced level in English\n",
+      "📌Salary will be determined after the interview up to: 2000,000 SYP\n",
+      "مكان العمل: في الشركة دمشق الجسر الأبيض أو عن بعد\n",
+      "📮Send CV to: \n",
+      "Career.solutions.fast@gmail.com\n",
+      "\n",
+      "#تواصل #فرص #عمل #توظيف #شاغر\n",
+      "#Tawasol #Tawasol_Job\n",
+      "#Hiring  #job #developer\n",
+      "#Tawasol #Tawasol_Job\n",
+      "#jobseekers #jobseeker #interview #covid #recruiter #jobsearching #engineer #hiringnow\n",
+      "Jploi TAWASOL job vacancy Flutter Developer 11:22 Tuesday,Sep17 Full Time Remotely/ at the company office in Damascus Salary Up to:2000,000SYP Send yourCV to: Career.solutions.fast@gmail.com 0992081792 Jnlgi Jialgi\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.full_text.values[26])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latest_idx = 26"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nSoft Skills: Communication, Interpersonal, English.\\nHard Skills: Flutter, Android, iOS, Engineering.'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "responses[26]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RateLimitError",
+     "evalue": "You exceeded your current quota, please check your plan and billing details.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRateLimitError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m   responses[i] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      8\u001b[0m   \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m completion \u001b[38;5;241m=\u001b[39m \u001b[43mopenai\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCompletion\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreate\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[43m\u001b[49m\u001b[43mengine\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_engine\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     12\u001b[0m \u001b[43m\u001b[49m\u001b[43mprompt\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mquestion\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mjob_post\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[43m\u001b[49m\u001b[43mmax_tokens\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m200\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     14\u001b[0m \u001b[43m\u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     15\u001b[0m \u001b[43m\u001b[49m\u001b[43mstop\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m     16\u001b[0m \u001b[43m\u001b[49m\u001b[43mtemperature\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     17\u001b[0m responses[i] \u001b[38;5;241m=\u001b[39m completion\u001b[38;5;241m.\u001b[39mchoices[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mtext\n\u001b[0;32m     21\u001b[0m latest_idx \u001b[38;5;241m=\u001b[39m i\n",
+      "File \u001b[1;32mc:\\Users\\Ivan\\Desktop\\Codes\\telegram-channel\\.venv\\lib\\site-packages\\openai\\api_resources\\completion.py:25\u001b[0m, in \u001b[0;36mCompletion.create\u001b[1;34m(cls, *args, **kwargs)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m     24\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 25\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39mcreate(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m     26\u001b[0m     \u001b[39mexcept\u001b[39;00m TryAgain \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m     27\u001b[0m         \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m time\u001b[39m.\u001b[39mtime() \u001b[39m>\u001b[39m start \u001b[39m+\u001b[39m timeout:\n",
+      "File \u001b[1;32mc:\\Users\\Ivan\\Desktop\\Codes\\telegram-channel\\.venv\\lib\\site-packages\\openai\\api_resources\\abstract\\engine_api_resource.py:153\u001b[0m, in \u001b[0;36mEngineAPIResource.create\u001b[1;34m(cls, api_key, api_base, api_type, request_id, api_version, organization, **params)\u001b[0m\n\u001b[0;32m    127\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[0;32m    128\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcreate\u001b[39m(\n\u001b[0;32m    129\u001b[0m     \u001b[39mcls\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    136\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams,\n\u001b[0;32m    137\u001b[0m ):\n\u001b[0;32m    138\u001b[0m     (\n\u001b[0;32m    139\u001b[0m         deployment_id,\n\u001b[0;32m    140\u001b[0m         engine,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    150\u001b[0m         api_key, api_base, api_type, api_version, organization, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams\n\u001b[0;32m    151\u001b[0m     )\n\u001b[1;32m--> 153\u001b[0m     response, _, api_key \u001b[39m=\u001b[39m requestor\u001b[39m.\u001b[39;49mrequest(\n\u001b[0;32m    154\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mpost\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m    155\u001b[0m         url,\n\u001b[0;32m    156\u001b[0m         params\u001b[39m=\u001b[39;49mparams,\n\u001b[0;32m    157\u001b[0m         headers\u001b[39m=\u001b[39;49mheaders,\n\u001b[0;32m    158\u001b[0m         stream\u001b[39m=\u001b[39;49mstream,\n\u001b[0;32m    159\u001b[0m         request_id\u001b[39m=\u001b[39;49mrequest_id,\n\u001b[0;32m    160\u001b[0m         request_timeout\u001b[39m=\u001b[39;49mrequest_timeout,\n\u001b[0;32m    161\u001b[0m     )\n\u001b[0;32m    163\u001b[0m     \u001b[39mif\u001b[39;00m stream:\n\u001b[0;32m    164\u001b[0m         \u001b[39m# must be an iterator\u001b[39;00m\n\u001b[0;32m    165\u001b[0m         \u001b[39massert\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(response, OpenAIResponse)\n",
+      "File \u001b[1;32mc:\\Users\\Ivan\\Desktop\\Codes\\telegram-channel\\.venv\\lib\\site-packages\\openai\\api_requestor.py:226\u001b[0m, in \u001b[0;36mAPIRequestor.request\u001b[1;34m(self, method, url, params, headers, files, stream, request_id, request_timeout)\u001b[0m\n\u001b[0;32m    205\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrequest\u001b[39m(\n\u001b[0;32m    206\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[0;32m    207\u001b[0m     method,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    214\u001b[0m     request_timeout: Optional[Union[\u001b[39mfloat\u001b[39m, Tuple[\u001b[39mfloat\u001b[39m, \u001b[39mfloat\u001b[39m]]] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m    215\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tuple[Union[OpenAIResponse, Iterator[OpenAIResponse]], \u001b[39mbool\u001b[39m, \u001b[39mstr\u001b[39m]:\n\u001b[0;32m    216\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrequest_raw(\n\u001b[0;32m    217\u001b[0m         method\u001b[39m.\u001b[39mlower(),\n\u001b[0;32m    218\u001b[0m         url,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    224\u001b[0m         request_timeout\u001b[39m=\u001b[39mrequest_timeout,\n\u001b[0;32m    225\u001b[0m     )\n\u001b[1;32m--> 226\u001b[0m     resp, got_stream \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_interpret_response(result, stream)\n\u001b[0;32m    227\u001b[0m     \u001b[39mreturn\u001b[39;00m resp, got_stream, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapi_key\n",
+      "File \u001b[1;32mc:\\Users\\Ivan\\Desktop\\Codes\\telegram-channel\\.venv\\lib\\site-packages\\openai\\api_requestor.py:599\u001b[0m, in \u001b[0;36mAPIRequestor._interpret_response\u001b[1;34m(self, result, stream)\u001b[0m\n\u001b[0;32m    591\u001b[0m     \u001b[39mreturn\u001b[39;00m (\n\u001b[0;32m    592\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_interpret_response_line(\n\u001b[0;32m    593\u001b[0m             line, result\u001b[39m.\u001b[39mstatus_code, result\u001b[39m.\u001b[39mheaders, stream\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    594\u001b[0m         )\n\u001b[0;32m    595\u001b[0m         \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m parse_stream(result\u001b[39m.\u001b[39miter_lines())\n\u001b[0;32m    596\u001b[0m     ), \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    597\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    598\u001b[0m     \u001b[39mreturn\u001b[39;00m (\n\u001b[1;32m--> 599\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_interpret_response_line(\n\u001b[0;32m    600\u001b[0m             result\u001b[39m.\u001b[39;49mcontent, result\u001b[39m.\u001b[39;49mstatus_code, result\u001b[39m.\u001b[39;49mheaders, stream\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m\n\u001b[0;32m    601\u001b[0m         ),\n\u001b[0;32m    602\u001b[0m         \u001b[39mFalse\u001b[39;00m,\n\u001b[0;32m    603\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\Ivan\\Desktop\\Codes\\telegram-channel\\.venv\\lib\\site-packages\\openai\\api_requestor.py:655\u001b[0m, in \u001b[0;36mAPIRequestor._interpret_response_line\u001b[1;34m(self, rbody, rcode, rheaders, stream)\u001b[0m\n\u001b[0;32m    653\u001b[0m stream_error \u001b[39m=\u001b[39m stream \u001b[39mand\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39merror\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m resp\u001b[39m.\u001b[39mdata\n\u001b[0;32m    654\u001b[0m \u001b[39mif\u001b[39;00m stream_error \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39m200\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m rcode \u001b[39m<\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[1;32m--> 655\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandle_error_response(\n\u001b[0;32m    656\u001b[0m         rbody, rcode, resp\u001b[39m.\u001b[39mdata, rheaders, stream_error\u001b[39m=\u001b[39mstream_error\n\u001b[0;32m    657\u001b[0m     )\n\u001b[0;32m    658\u001b[0m \u001b[39mreturn\u001b[39;00m resp\n",
+      "\u001b[1;31mRateLimitError\u001b[0m: You exceeded your current quota, please check your plan and billing details."
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(latest_idx,data.full_text.shape[0]):\n",
+    "    job_post = data.full_text.values[i]\n",
+    "    if job_post is np.nan:\n",
+    "      responses[i] = ''\n",
+    "      continue\n",
+    "    if job_post == '':\n",
+    "      responses[i] = ''\n",
+    "      continue\n",
+    "   \n",
+    "    completion = openai.Completion.create(\n",
+    "    engine=model_engine,\n",
+    "    prompt=question + '\\n' + job_post,\n",
+    "    max_tokens=200,\n",
+    "    n=1,\n",
+    "    stop=None,\n",
+    "    temperature=0)\n",
+    "    responses[i] = completion.choices[0].text\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    latest_idx = i\n",
+    "    print(i)"
+   ]
   }
  ],
  "metadata": {
