fix salary column

--- a/notebooks/05-Analyze-JobPosts.ipynb
+++ b/notebooks/05-Analyze-JobPosts.ipynb
@@ -712,20 +712,8 @@
       "الزمان: أيام 3-4-5 كانون الثاني 2023 من الساعة 10-1 ظهراً كل يوم.\n",
       "للتسجيل يرجى تعبئة الاستمارة على الرابط \n",
       "https://cloud.isceit.sy/index.php/apps/forms/s/J4PPTf8iqydr9b4j5s4gfdse\n",
-      "NANS lmyicoyrlaadooamg 3937079 # info@nans.gov.sy aslalatbellalall www.nans.gov.sy 3937032\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " none\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "NANS lmyicoyrlaadooamg 3937079 # info@nans.gov.sy aslalatbellalall www.nans.gov.sy 3937032\n",
+      " none\n",
       "*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n"
      ]
     }
@@ -2427,48 +2415,24 @@
       "#Hiring\n",
       "#jobseekers #jobseeker #interview #covid  #education #recruiter #jobsearching  #hiringnow #employmentopportunities  #vacancy\n",
       "Job Vacancy Employees for Operations Department Full.Time Send your CV to: Go.for.vacant@gmail.com Joloi 0992.081792 Lole\n",
-      "****************************************\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
+      "****************************************\n",
       "Title: operations department \n",
       "company: nan \n",
       "job_type: #Full_Time \n",
       "salary: nan \n",
       "location: nan Damascus\n",
-      "years: nan \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "years: nan \n",
       "****************************************\n",
       "-------------------- 4 --------------------\n",
       "https://www.facebook.com/384708578676644/posts/1271730063307820/\n",
       "Jmloi AWASOL Developer Remotely Send your CV to: hr@smartech-sy.com Jblgi O992O81792 Lialq\n",
-      "****************************************\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
+      "****************************************\n",
       "Title: awasol developer \n",
       "company: smartech-sy \n",
       "job_type: nan remotely\n",
       "salary: nan \n",
       "location: remotely \n",
-      "years: nan \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "years: nan \n",
       "****************************************\n",
       "-------------------- 5 --------------------\n",
       "#فرصة_تدريب #فرصة_توظيف\n",
