extract avg required years of experience

--- a/notebooks/06-Data-Formating.ipynb
+++ b/notebooks/06-Data-Formating.ipynb
@@ -647,10 +647,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cleaning Salary Column"
+    "## Cleaning Salary Column\n"
    ]
   },
   {
@@ -659,7 +660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"../data/data_v6.csv\")"
+    "data = pd.read_csv(\"../data/data_v6.csv\")\n"
    ]
   },
   {
@@ -679,7 +680,7 @@
     }
    ],
    "source": [
-    "data.salary.nunique()"
+    "data.salary.nunique()\n"
    ]
   },
   {
@@ -689,7 +690,7 @@
    "outputs": [],
    "source": [
     "def contains_digit(string):\n",
-    "    return any(char.isdigit() for char in string)"
+    "    return any(char.isdigit() for char in string)\n"
    ]
   },
   {
@@ -700,7 +701,7 @@
    "source": [
     "pattern = r\"syp|sp|l\\.s|syrian lira\"\n",
     "digits = r\"\\d+\"\n",
-    "dollar = r\"dollar|usd\""
+    "dollar = r\"dollar|usd\"\n"
    ]
   },
   {
@@ -2599,17 +2600,19 @@
    ],
    "source": [
     "manual_input = []\n",
-    "salaries = data[data.salary.notna() & data.salary.str.contains(digits)][[\"full_text\" ,\"salary\",\"type\" ]]\n",
+    "salaries = data[data.salary.notna() & data.salary.str.contains(digits)][\n",
+    "    [\"full_text\", \"salary\", \"type\"]\n",
+    "]\n",
     "for i in range(salaries.shape[0]):\n",
     "    item = salaries.iloc[i]\n",
     "    print(item.full_text)\n",
-    "    print(f'Salary: {item.salary}')\n",
+    "    print(f\"Salary: {item.salary}\")\n",
     "    print(f'Type: {item[\"type\"]}')\n",
     "    user_input = input()\n",
     "    if user_input == \"\":\n",
     "        user_input = item.salary\n",
     "    manual_input.append(user_input)\n",
-    "    print(\"*\"*40)"
+    "    print(\"*\" * 40)\n"
    ]
   },
   {
@@ -2618,7 +2621,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "actual_salaries = list(map(lambda x:x!='none' , manual_input))"
+    "actual_salaries = list(map(lambda x: x != \"none\", manual_input))\n"
    ]
   },
   {
@@ -2627,7 +2630,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['is_salary'] = False "
+    "data[\"is_salary\"] = False\n"
    ]
   },
   {
@@ -2636,7 +2639,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.loc[data.salary.notna() & data.salary.str.contains(digits) , 'is_salary'] = actual_salaries"
+    "data.loc[\n",
+    "    data.salary.notna() & data.salary.str.contains(digits), \"is_salary\"\n",
+    "] = actual_salaries\n"
    ]
   },
   {
@@ -2706,26 +2711,25 @@
    ],
    "source": [
     "def fix_salary(salary):\n",
-    "    salary = re.sub(r\"syp|sp|l\\.s|syrian lira|syrian pound(s)?|s\\.p\" , \" SYP\", salary )\n",
-    "    salary = re.sub(r\"dollar|usd|\\$|\\ds$\" , \" USD\", salary )\n",
-    "    salary = re.sub(r\",|#|~|'|\\.|:\" ,\"\" , salary)\n",
-    "    salary = re.sub(r\" million(s)?|(?<=\\d)m\" , \"000000\" , salary)\n",
-    "    salary = re.sub(r'(?<=\\d)\\s+(?=\\d{3}\\s)' , \"\" , salary)\n",
+    "    salary = re.sub(r\"syp|sp|l\\.s|syrian lira|syrian pound(s)?|s\\.p\", \" SYP\", salary)\n",
+    "    salary = re.sub(r\"dollar|usd|\\$|\\ds$\", \" USD\", salary)\n",
+    "    salary = re.sub(r\",|#|~|'|\\.|:\", \"\", salary)\n",
+    "    salary = re.sub(r\" million(s)?|(?<=\\d)m\", \"000000\", salary)\n",
+    "    salary = re.sub(r\"(?<=\\d)\\s+(?=\\d{3}\\s)\", \"\", salary)\n",
     "    salary = re.sub(r\"per month|starting from|up to\", \"\", salary)\n",
     "    salary = salary.strip()\n",
-    "    salary = re.sub(r\"(?<=0{3})$\" , \" SYP\" , salary)\n",
-    "    salary = re.sub(r\"(?<=0{2})$\" , \" USD\" , salary)\n",
-    "    salary = re.sub(r\"SYP\\s+\" , \"\" , salary)\n",
-    "    salary = re.sub(\"to|-|/\",\" - \",salary)\n",
-    "    salary = re.sub(r\"\\s+\" , \" \" , salary)\n",
-    "    salary = re.sub(r\"(?<=^\\d{2})\\s(?=-)\", \"00000 \" , salary)\n",
-    "    salary = re.sub(r\"(?<=^\\d{1})\\s(?=-)\", \"000000 \" , salary)\n",
-    "    \n",
-    "    \n",
+    "    salary = re.sub(r\"(?<=0{3})$\", \" SYP\", salary)\n",
+    "    salary = re.sub(r\"(?<=0{2})$\", \" USD\", salary)\n",
+    "    salary = re.sub(r\"SYP\\s+\", \"\", salary)\n",
+    "    salary = re.sub(\"to|-|/\", \" - \", salary)\n",
+    "    salary = re.sub(r\"\\s+\", \" \", salary)\n",
+    "    salary = re.sub(r\"(?<=^\\d{2})\\s(?=-)\", \"00000 \", salary)\n",
+    "    salary = re.sub(r\"(?<=^\\d{1})\\s(?=-)\", \"000000 \", salary)\n",
+    "\n",
     "    return salary\n",
     "\n",
     "\n",
-    "data[data.is_salary].salary.apply(fix_salary)"
+    "data[data.is_salary].salary.apply(fix_salary)\n"
    ]
   },
   {
@@ -2734,7 +2738,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"../data/data_v6.2.csv\" , index=False)"
+    "data.to_csv(\"../data/data_v6.2.csv\", index=False)\n"
    ]
   },
   {
@@ -2870,7 +2874,9 @@
     }
    ],
    "source": [
-    "data[data.salary.notna() & ~(data.salary.str.contains(digits,na=False))][[\"full_text\" ,\"salary\" ]]"
+    "data[data.salary.notna() & ~(data.salary.str.contains(digits, na=False))][\n",
+    "    [\"full_text\", \"salary\"]\n",
+    "]\n"
    ]
   },
   {
@@ -2907,14 +2913,15 @@
     }
    ],
    "source": [
-    "data.salary.str.contains(digits,na=False)"
+    "data.salary.str.contains(digits, na=False)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fixing location"
+    "### Fixing location\n"
    ]
   },
   {
@@ -2923,7 +2930,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"../data/data_v6.2.csv\")"
+    "data = pd.read_csv(\"../data/data_v6.2.csv\")\n"
    ]
   },
   {
@@ -2943,7 +2950,7 @@
     }
    ],
    "source": [
-    "data.location.nunique()"
+    "data.location.nunique()\n"
    ]
   },
   {
@@ -2953,7 +2960,8 @@
    "outputs": [],
    "source": [
     "import spacy\n",
-    "nlp = spacy.load(\"en_core_web_sm\")"
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n"
    ]
   },
   {
@@ -2967,21 +2975,23 @@
     "    if location == np.nan:\n",
     "        return location\n",
     "    loc = \"\"\n",
-    "    \n",
+    "\n",
     "    if \"remote\" in location:\n",
     "        loc = \"remotely\"\n",
     "\n",
     "    doc = nlp(location)\n",
     "    for ent in doc.ents:\n",
-    "        if ent.label_ == 'GPE':\n",
+    "        if ent.label_ == \"GPE\":\n",
     "            if loc == \"remotely\":\n",
     "                loc = \"(hybrid) remotely\"\n",
     "            loc += \" \" + ent.text\n",
     "\n",
     "    return loc.strip()\n",
+    "\n",
+    "\n",
     "# fixed_locations = data[data.location.notna()].location.apply(fix_location)\n",
     "# print(fixed_locations.nunique())\n",
-    "# fixed_locations.unique()"
+    "# fixed_locations.unique()\n"
    ]
   },
   {
@@ -3874,7 +3884,7 @@
     }
    ],
    "source": [
-    "data.location = data.location.astype(\"str\").apply(fix_location)"
+    "data.location = data.location.astype(\"str\").apply(fix_location)\n"
    ]
   },
   {
@@ -3900,7 +3910,7 @@
     }
    ],
    "source": [
-    "data.location.unique()"
+    "data.location.unique()\n"
    ]
   },
   {
@@ -3909,7 +3919,316 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"../data/data_v6.3.csv\",index=False)"
+    "data.to_csv(\"../data/data_v6.3.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'date', 'photo', 'text', 'text_entities', 'raw_text', 'type',\n",
+       "       'ocr_res', 'full_text', 'description', 'job_title', 'company_name',\n",
+       "       'salary', 'location', 'job_type', 'years_of_experience', 'skills',\n",
+       "       'abstract_title', 'experience', 'is_salary'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fixing Years of Experience column\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "134"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.years_of_experience.nunique()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fix_experience_years(text):\n",
+    "    if text is np.nan:\n",
+    "        return text\n",
+    "    numbers = {\n",
+    "        \"one \": \"1 \",\n",
+    "        \"two \": \"2 \",\n",
+    "        \"three\": \"3\",\n",
+    "        \"four \": \"4 \",\n",
+    "        \"five \": \"5 \",\n",
+    "        \"six \": \"6 \",\n",
+    "        \"seven \": \"7 \",\n",
+    "        \"eight \": \"8 \",\n",
+    "        \"nine \": \"9 \",\n",
+    "        \"ten \": \"10 \",\n",
+    "    }\n",
+    "    numbers_re = re.compile(\"|\".join(numbers.keys()))\n",
+    "\n",
+    "    text = numbers_re.sub(lambda x: numbers[x.group()], text)\n",
+    "    text = re.sub(\"fresh \", \"0 year\", text)\n",
+    "\n",
+    "    if not re.search(\"\\d\", text):\n",
+    "        return np.nan\n",
+    "\n",
+    "    match = re.findall(r\"\\b\\d+\\b\", text)\n",
+    "    if match:\n",
+    "        numbers_set = np.array(list(set(match)), dtype=\"int32\")\n",
+    "        return np.floor(numbers_set.mean())\n",
+    "    return np.nan\n",
+    "\n",
+    "    # text = re.sub('#|\\+|\\(|\\)|<|>' , '' , text)\n",
+    "    # text = re.sub('(?<=\\d) to (?=\\d)' , '-', text)\n",
+    "    # text = re.sub('(\\d+-\\d+\\s)(years?)' , r'\\1' , text)\n",
+    "\n",
+    "    # #match = re.search('(\\d+\\s)(years?)',text)\n",
+    "\n",
+    "    # match = re.search('(\\d+)(?=\\syear)' , text)\n",
+    "    # if match:\n",
+    "    #     text = match.group()\n",
+    "\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "data.loc[data.years_of_experience.notna()].years_of_experience.apply(\n",
+    "    fix_experience_years\n",
+    ").nunique()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "extensive  ::  nan\n",
+      "3  ::  3.0\n",
+      "1  ::  1.0\n",
+      "2+  ::  2.0\n",
+      "fresh graduated  ::  0.0\n",
+      "1-2  ::  1.0\n",
+      "0-2  ::  1.0\n",
+      "+2 years  ::  2.0\n",
+      "5+  ::  5.0\n",
+      "prior experience as a python developer  ::  nan\n",
+      "2  ::  2.0\n",
+      "1 year  ::  1.0\n",
+      "at least 3 years xp on android or ios and at least 2 years xp on flutter  ::  2.0\n",
+      "+3 years  ::  3.0\n",
+      "5  ::  5.0\n",
+      "required  ::  nan\n",
+      "4  ::  4.0\n",
+      "4+  ::  4.0\n",
+      "7+  ::  7.0\n",
+      " 2 years  ::  2.0\n",
+      "2+ years of experience in php, laravel framework, 2+ years of experience in vuejs, 2+ years of experience in javascript.  ::  2.0\n",
+      "#3+  ::  3.0\n",
+      "at least 2 years  ::  2.0\n",
+      "more than 2 years  ::  2.0\n",
+      "ee  ::  nan\n",
+      "#4 years +  ::  4.0\n",
+      "3+  ::  3.0\n",
+      "at least 5 years xp in swift/objective-c  ::  5.0\n",
+      "#not specified  ::  nan\n",
+      "1+  ::  1.0\n",
+      "3 years  ::  3.0\n",
+      "1-2 years  ::  1.0\n",
+      "4+ years  ::  4.0\n",
+      "preferably with prior experience in electronic maintenance  ::  nan\n",
+      "over two year's developing php laravel  ::  2.0\n",
+      "at least one year  ::  1.0\n",
+      "minimum 2 years  ::  2.0\n",
+      "1 year with laravel php or similar technologies  ::  1.0\n",
+      "2+ years of experience in php, laravel framework, 2+ years of experience in vuejs, 2+ years of experience in javascript  ::  2.0\n",
+      "#none  ::  nan\n",
+      "#2+  ::  2.0\n",
+      "#3  ::  3.0\n",
+      "10+ years for ios and android, 2 years for flutter  ::  6.0\n",
+      "experience in php, laravel framework, vuejs, oop and design patterns.  ::  nan\n",
+      "7-10 years  ::  8.0\n",
+      "5-7  ::  6.0\n",
+      "ios team leader - xp in swift/objective-c, android team leader - 2 years experience in flutter with native ex in ios and android, flutter team leader - 2 years experience in flutter with native ex in ios and android  ::  2.0\n",
+      "1 to 2  ::  1.0\n",
+      "1 year or less  ::  1.0\n",
+      "good experience in microsoft .net platform, database: sql server, good experience devexpress library  ::  nan\n",
+      "4+ years experience of python coding skills, 1+ years experience with the django framework  ::  2.0\n",
+      "<1  ::  1.0\n",
+      "2+ years  ::  2.0\n",
+      "#1 year (for sales employee)  ::  1.0\n",
+      "#at least 3 years  ::  3.0\n",
+      "1+ year  ::  1.0\n",
+      "30  ::  30.0\n",
+      "#good office experience  ::  nan\n",
+      "15 years  ::  15.0\n",
+      " 3 years  ::  3.0\n",
+      "bachelor's degree in information technology, software development management, software engineering, computer science, or a related field.  ::  nan\n",
+      "at least 1 year  ::  1.0\n",
+      "bachelor’s degree in communications, marketing, journalism, or related field.  ::  nan\n",
+      "+5years experience after graduation  ::  nan\n",
+      "#good  ::  nan\n",
+      "php - 3 years, java - good knowledge  ::  3.0\n",
+      "at least 3 years  ::  3.0\n",
+      "#1 year  ::  1.0\n",
+      "3+ years of experience with php as web developer, 2+ years of experience with magento 2  ::  2.0\n",
+      "proven work experience with php and wordpress themes & plugins  ::  nan\n",
+      "good  ::  nan\n",
+      "2-3  ::  2.0\n",
+      "2 years  ::  2.0\n",
+      "one year  ::  1.0\n",
+      "+3 years' experience after graduation  ::  3.0\n",
+      "1+ years  ::  1.0\n",
+      "mid/senior level  ::  nan\n",
+      "1 year experience with ionic+ angular or similar technologies  ::  1.0\n",
+      "good experience in laboratories  ::  nan\n",
+      "high  ::  nan\n",
+      "good experience in video editing and design  ::  nan\n",
+      "minimum 1-2 years  ::  1.0\n",
+      "> 5 years  ::  5.0\n",
+      "2 - 3 years  ::  2.0\n",
+      "must have worked on live projects  ::  nan\n",
+      "er year   ::  nan\n",
+      "proven work experience in software development and software quality assurance  ::  nan\n",
+      "0-2 years  ::  1.0\n",
+      "#at least 2 years  ::  2.0\n",
+      "1 year or more  ::  1.0\n",
+      "3+ years  ::  3.0\n",
+      "3 years of asp.net core experience, 3 years of ms sql server & mysql  ::  3.0\n",
+      "fresh it graduate  ::  0.0\n",
+      "bachelor’s degree in computer programming, computer science, or a related field.  ::  nan\n",
+      "+1 year of experience in asp core and +1 year of experience in reactjs  ::  1.0\n",
+      "more than 2 years experience nodejs, more than 2 years experience angular  ::  2.0\n",
+      "#2-4  ::  3.0\n",
+      "minimum 1 year  ::  1.0\n",
+      "(4-6) years  ::  5.0\n",
+      "10  ::  10.0\n",
+      "5 years of experience in front-end and 2 years of experience in vuejs  ::  3.0\n",
+      "ba degree in computer science or similar relevant field.  ::  nan\n",
+      "9  ::  9.0\n",
+      "er year.  ::  nan\n",
+      "5 years in programming, 2 years as team leader  ::  3.0\n",
+      "minimum 3 years  ::  3.0\n",
+      "#expert(+2 years)  ::  2.0\n",
+      "previous experience in auditing is preferred  ::  nan\n",
+      "mid to senior level  ::  nan\n",
+      "not required  ::  nan\n",
+      "bachelor's degree in computer science, engineering, or a related technical field  ::  nan\n",
+      "proven seo and sem experience  ::  nan\n",
+      "experience in conducting automated testing.  ::  nan\n",
+      "at least two years  ::  2.0\n",
+      "minimum of two years of experience in accounting and bookkeeping.  ::  2.0\n",
+      "2 years in low current, 1 year in mobile maintenance  ::  1.0\n",
+      "5+ years php backend development, 3+ years' experience with linux servers  ::  4.0\n",
+      "5+ years  ::  5.0\n",
+      "experience of development and customization of business applications on zoho creator is a must  ::  nan\n",
+      "proven work experience as a manager, team leader or supervisor  ::  nan\n",
+      "bachelor/diploma degree in computer science or and related field of study.  ::  nan\n",
+      "3-5  ::  4.0\n",
+      "three  ::  3.0\n",
+      "api rest, git  ::  nan\n",
+      "2-5 years  ::  3.0\n",
+      "minimum 2 years after graduation  ::  2.0\n",
+      "two to four years  ::  3.0\n",
+      "strong analytical problem solving, must have worked on live projects  ::  nan\n",
+      "proven work experience as a user experience designer or a similar role  ::  nan\n",
+      "proven experience working as a doctor  ::  nan\n",
+      "preferable to have one year working experience  ::  1.0\n",
+      "2 years after graduation  ::  2.0\n",
+      "proven graphic designing experience  ::  nan\n",
+      "experience in php, laravel framework, experience in vuejs, degree in computer science or related fields, strong knowledge of oop and design patterns.  ::  nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_values = data.loc[data.years_of_experience.notna()].years_of_experience.unique()\n",
+    "for v in unique_values:\n",
+    "    print(v, \" :: \", fix_experience_years(v))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan,  3.,  1.,  2.,  0.,  5.,  4.,  7.,  6.,  8., 30., 15., 10.,\n",
+       "        9.])"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[data.years_of_experience.notna()].years_of_experience.apply(\n",
+    "    fix_experience_years\n",
+    ").unique()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"avg_exp_years\"] = data.years_of_experience.apply(fix_experience_years)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv(\"../data/data_v6.4.csv\", index=False)\n"
    ]
   },
   {
@@ -3950,7 +4269,7 @@
     }
    ],
    "source": [
-    "data.job_type.nunique()"
+    "data.job_type.nunique()\n"
    ]
   },
   {
@@ -4050,7 +4369,7 @@
     }
    ],
    "source": [
-    "data.years_of_experience.unique()"
+    "data.years_of_experience.unique()\n"
    ]
   },
   {
