fix job type column

--- a/notebooks/06-Data-Formating.ipynb
+++ b/notebooks/06-Data-Formating.ipynb
@@ -4233,6 +4233,151 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'date', 'photo', 'text', 'text_entities', 'raw_text', 'type',\n",
+       "       'ocr_res', 'full_text', 'description', 'job_title', 'company_name',\n",
+       "       'salary', 'location', 'job_type', 'years_of_experience', 'skills',\n",
+       "       'abstract_title', 'experience', 'is_salary', 'avg_exp_years'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fixing Job Type column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fix_job_type(text):\n",
+    "    if text is np.nan:\n",
+    "        return text\n",
+    "\n",
+    "    text = text.lower().strip()\n",
+    "    text = re.sub(r\"#|_\", \"\", text)\n",
+    "    text = re.sub(r\"(full time)|(fulltime)|(full_time)\", \"full-time\", text)\n",
+    "    text = re.sub(r\"(part time)|(parttime)|(part_time)\", \"part-time\", text)\n",
+    "\n",
+    "    res = \"\"\n",
+    "    if \"full-time\" in text:\n",
+    "        res += \"full-time \"\n",
+    "    if \"part-time\" in text:\n",
+    "        res += \"part-time \"\n",
+    "    if \"freelance\" in text:\n",
+    "        res += \"freelance\"\n",
+    "    if \"train\" in text:\n",
+    "        res += \"training \"\n",
+    "    if \"free time\" in text or \"task bas\" in text:\n",
+    "        res += \"task based \"\n",
+    "\n",
+    "    if res == \"\":\n",
+    "        return np.nan\n",
+    "\n",
+    "    return res.strip()\n",
+    "\n",
+    "\n",
+    "print(data.job_type.apply(fix_job_type).nunique())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "651"
+      ]
+     },
+     "execution_count": 265,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.job_type.apply(fix_job_type).notna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['job_type'] = data.job_type.apply(fix_job_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 267,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.job_type.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "226"
+      ]
+     },
+     "execution_count": 268,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.job_type.isna().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -4244,237 +4389,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "116"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.job_type.nunique()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['extensive', '3', '1', nan, '2+', 'fresh graduated', '1-2', '0-2',\n",
-       "       '+2 years', '5+', 'prior experience as a python developer', '2',\n",
-       "       '1 year',\n",
-       "       'at least 3 years xp on android or ios and at least 2 years xp on flutter',\n",
-       "       '+3 years', '5', 'required', '4', '4+', '7+', ' 2 years',\n",
-       "       '2+ years of experience in php, laravel framework, 2+ years of experience in vuejs, 2+ years of experience in javascript.',\n",
-       "       '#3+', 'at least 2 years', 'more than 2 years', 'ee', '#4 years +',\n",
-       "       '3+', 'at least 5 years xp in swift/objective-c', '#not specified',\n",
-       "       '1+', '3 years', '1-2 years', '4+ years',\n",
-       "       'preferably with prior experience in electronic maintenance',\n",
-       "       \"over two year's developing php laravel\", 'at least one year',\n",
-       "       'minimum 2 years',\n",
-       "       '1 year with laravel php or similar technologies',\n",
-       "       '2+ years of experience in php, laravel framework, 2+ years of experience in vuejs, 2+ years of experience in javascript',\n",
-       "       '#none', '#2+', '#3',\n",
-       "       '10+ years for ios and android, 2 years for flutter',\n",
-       "       'experience in php, laravel framework, vuejs, oop and design patterns.',\n",
-       "       '7-10 years', '5-7',\n",
-       "       'ios team leader - xp in swift/objective-c, android team leader - 2 years experience in flutter with native ex in ios and android, flutter team leader - 2 years experience in flutter with native ex in ios and android',\n",
-       "       '1 to 2', '1 year or less',\n",
-       "       'good experience in microsoft .net platform, database: sql server, good experience devexpress library',\n",
-       "       '4+ years experience of python coding skills, 1+ years experience with the django framework',\n",
-       "       '<1', '2+ years', '#1 year (for sales employee)',\n",
-       "       '#at least 3 years', '1+ year', '30', '#good office experience',\n",
-       "       '15 years', ' 3 years',\n",
-       "       \"bachelor's degree in information technology, software development management, software engineering, computer science, or a related field.\",\n",
-       "       'at least 1 year',\n",
-       "       'bachelor’s degree in communications, marketing, journalism, or related field.',\n",
-       "       '+5years experience after graduation', '#good',\n",
-       "       'php - 3 years, java - good knowledge', 'at least 3 years',\n",
-       "       '#1 year',\n",
-       "       '3+ years of experience with php as web developer, 2+ years of experience with magento 2',\n",
-       "       'proven work experience with php and wordpress themes & plugins',\n",
-       "       'good', '2-3', '2 years', 'one year',\n",
-       "       \"+3 years' experience after graduation\", '1+ years',\n",
-       "       'mid/senior level',\n",
-       "       '1 year experience with ionic+ angular or similar technologies',\n",
-       "       'good experience in laboratories', 'high',\n",
-       "       'good experience in video editing and design', 'minimum 1-2 years',\n",
-       "       '> 5 years', '2 - 3 years', 'must have worked on live projects',\n",
-       "       'er year ',\n",
-       "       'proven work experience in software development and software quality assurance',\n",
-       "       '0-2 years', '#at least 2 years', '1 year or more', '3+ years',\n",
-       "       '3 years of asp.net core experience, 3 years of ms sql server & mysql',\n",
-       "       'fresh it graduate',\n",
-       "       'bachelor’s degree in computer programming, computer science, or a related field.',\n",
-       "       '+1 year of experience in asp core and +1 year of experience in reactjs',\n",
-       "       'more than 2 years experience nodejs, more than 2 years experience angular',\n",
-       "       '#2-4', 'minimum 1 year', '(4-6) years', '10',\n",
-       "       '5 years of experience in front-end and 2 years of experience in vuejs',\n",
-       "       'ba degree in computer science or similar relevant field.', '9',\n",
-       "       'er year.', '5 years in programming, 2 years as team leader',\n",
-       "       'minimum 3 years', '#expert(+2 years)',\n",
-       "       'previous experience in auditing is preferred',\n",
-       "       'mid to senior level', 'not required',\n",
-       "       \"bachelor's degree in computer science, engineering, or a related technical field\",\n",
-       "       'proven seo and sem experience',\n",
-       "       'experience in conducting automated testing.',\n",
-       "       'at least two years',\n",
-       "       'minimum of two years of experience in accounting and bookkeeping.',\n",
-       "       '2 years in low current, 1 year in mobile maintenance',\n",
-       "       \"5+ years php backend development, 3+ years' experience with linux servers\",\n",
-       "       '5+ years',\n",
-       "       'experience of development and customization of business applications on zoho creator is a must',\n",
-       "       'proven work experience as a manager, team leader or supervisor',\n",
-       "       'bachelor/diploma degree in computer science or and related field of study.',\n",
-       "       '3-5', 'three', 'api rest, git', '2-5 years',\n",
-       "       'minimum 2 years after graduation', 'two to four years',\n",
-       "       'strong analytical problem solving, must have worked on live projects',\n",
-       "       'proven work experience as a user experience designer or a similar role',\n",
-       "       'proven experience working as a doctor',\n",
-       "       'preferable to have one year working experience',\n",
-       "       '2 years after graduation', 'proven graphic designing experience',\n",
-       "       'experience in php, laravel framework, experience in vuejs, degree in computer science or related fields, strong knowledge of oop and design patterns.'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.years_of_experience.unique()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['/ developer', 'cashier', '.net developer',\n",
-       "       'operations department', 'awasol developer',\n",
-       "       'coaching scholarship', 'sales', 'graphic designer', 'front-end',\n",
-       "       'social media manager',\n",
-       "       'telecommunication engineers and information technology engineers',\n",
-       "       'back-end', 'full-stack', 'ui/ux designer', 'python developer',\n",
-       "       'react native developer', 'mobile app developer',\n",
-       "       'delivery center coordinator', nan, 'business analyst',\n",
-       "       'devops and system administrator', 'developer',\n",
-       "       'wordpress developer, seo & digital marketing specialist',\n",
-       "       'academic supervisor (tesol)', 'network administrator',\n",
-       "       'help desk',\n",
-       "       'timecoder of tv programs, translation quality controller',\n",
-       "       'software developer', 'quality assurance', 'erp developer',\n",
-       "       'java developer', 'accountant', 'web developer',\n",
-       "       'network and system administrator', 'system analyst',\n",
-       "       'system engineer', 'developers', 'motion designer',\n",
-       "       'executive assistant', 'commercial correspondence officer',\n",
-       "       'content creator', 'react developer',\n",
-       "       'machine learning team leader', 'data researcher',\n",
-       "       'electronic maintenance technician', 'video editor',\n",
-       "       'car maintenance technician', 'customer services agents',\n",
-       "       'business data analyst', 'odoo app developer', 'technical support',\n",
-       "       'tesol specialist', 'technical researcher and writer',\n",
-       "       'video montage', 'human resources', 'it support', 'architect',\n",
-       "       'programming and development department manager',\n",
-       "       'public health graduates', 'security and networking consultant',\n",
-       "       'secretary', 'project manager', 'automation engineer',\n",
-       "       'power engineer', 'mongodb node.js developer',\n",
-       "       'plastic surgeon specialist',\n",
-       "       'ios team leader, android team leader, flutter team leader',\n",
-       "       'odoo developer', 'software test engineer', 'jblgi developer',\n",
-       "       'devops engineer', 'web/desktop developer', 'nursing graduate',\n",
-       "       'web penetration tester',\n",
-       "       'web/desktop developers c,asp.net sql server', 'cleaner',\n",
-       "       'administrative staff', 'turkish language translator',\n",
-       "       'integration developer', 'data entry clerk',\n",
-       "       'assistant in the setup department', 'node.js developer',\n",
-       "       'wordpress developer', 'cyber security', 'field data collection',\n",
-       "       'blockchain expert', 'management assistant',\n",
-       "       'api integration specialist', 'product specialist',\n",
-       "       'customer services lead', 'digital marketing',\n",
-       "       'engineering manager', 'unity developer', 'tv programmer',\n",
-       "       'veta for information technology', 'business development',\n",
-       "       'seo specialist', 'امتحانية لطلاب التاسع الأساسي',\n",
-       "       'امتحانية لطلاب الثالث الثانوي العلمي والأدبي',\n",
-       "       'software project manager', 'team leader',\n",
-       "       'development team leader',\n",
-       "       'flutter / laravel / system analyst developer', 'drivers',\n",
-       "       'tv program employee', 'java programmer & php programmer',\n",
-       "       '-level db admin', '3d modeler', 'c job opportunities',\n",
-       "       'professional translator', 'magento developer', 'mvp expert',\n",
-       "       'ionic developer', 'angular developer', 'field purchasing manager',\n",
-       "       'delivery captain', 'ionic developers', 'laboratory technician',\n",
-       "       'video editor & montage', 'software engineer ( and )',\n",
-       "       'coding and stem tutor', 'waso system administrator', 'programmer',\n",
-       "       'isp operation engineer', 'react/react native developers',\n",
-       "       'cms developer', 'cms developer for wordpress magento platforms',\n",
-       "       'it auditor', 'mean, mern developers',\n",
-       "       'coordinator, delivery center',\n",
-       "       'erp engineer, business information systems', 'bis specialist',\n",
-       "       'operator - milling', 'corporate support officer',\n",
-       "       'technical marketing specialist',\n",
-       "       'marketing representatives specialist', 'tawasol tester', 'tester',\n",
-       "       'billing platform developer', 'it solutions delivery manager',\n",
-       "       'it solution delivery manager', 'seo manager',\n",
-       "       'software team leader', 'programmer team leader',\n",
-       "       '.net  developer', 'application auditor', 'qa tester',\n",
-       "       'javascript developer', 'seo/sem specialist', 'english teachers',\n",
-       "       'zoho creator', 'zoho creatirs', 'portar (carrier)',\n",
-       "       'tourism agent', 'cyber security operations analyst',\n",
-       "       'cybersecurity operations analyst', 'jrlycailllouwljw!oigall',\n",
-       "       'مدير المعلوماتيّة', 'manager executive',\n",
-       "       'technician of low current', 'executive manager', 'data analyst',\n",
-       "       'editor and article writer', 'help desk specialist',\n",
-       "       'product owner', 'c++ developer', 'bi developer',\n",
-       "       'system administrator', 'business operations coordinator',\n",
-       "       'remote doctor', 'digital account manager', 'turkish translator',\n",
-       "       '2d animator'], dtype=object)"
-      ]
-     },
-     "execution_count": 392,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.job_title.apply(abstract_job_title).unique()\n"
-   ]
   },
   {
    "cell_type": "code",
